configure options have changed slightly and more of the standard --*dir
options should be supported in lieu of the old INN-specific options.  See
C<configure --help> for the available options.

=item *

tinyleaf, a miniature IHAVE-only leaf server, is now included.  See the
tinyleaf(8) man page for more information.

=item *

Support for embedded Tcl filters in innd has been removed.  It hasn't
worked for some time and causes innd crashes if compiled in (even if not
used).  If someone wants to step forward and maintain it, I recommend
starting from scratch and emulating the Perl and Python filters.

=item *

If a user is not authorized to approve articles (using the A access
control in readers.conf), articles that include Approved headers will be
rejected even if posted to unmoderated groups.  Some other site may
consider that group to be moderated.

=item *

If strippath is set in readers.conf, the whole user-supplied Path header
will now be stripped.  Previously, the final component of the
user-supplied Path would still be retained.

=item *

The -g option to nnrpd is no longer supported.  If you are verifying
passwords against the system password database, see the ckpasswd(8) man
page, and in particular the -s option.  (A much better idea would be to
just use PAM, which ckpasswd supports.)

=back

=head1 Changes in 2.4.3

=over 2

=item *

Previous versions of INN had an optimization for handling XHDR Newsgroups
that used the Xref header from overview.  While this does make the command
much faster, it doesn't produce accurate results and breaks the NNTP
protocol, so this optimization has been removed.

=back

=head1 Changes in 2.4.2

=over 2

=item *

INN is now licensed under a less restrictive license (about as minimally
restrictive as possible shy of public domain), and the clause similar to
the old BSD advertising clause has been dropped.

=item *

make install and make update now always install the newly built binaries,